[gd_scene load_steps=11 format=3 uid="uid://c01jphpv7yoe2"]

[ext_resource type="Script" path="res://level/level_3.gd" id="1_ne4j3"]
[ext_resource type="MeshLibrary" uid="uid://caa2gtvfu3lqg" path="res://meshlib/meshLib2.tres" id="2_4afur"]
[ext_resource type="PackedScene" uid="uid://1ohsnw7del1s" path="res://scenet/player.tscn" id="3_dxci0"]
[ext_resource type="PackedScene" uid="uid://ikciys8o8jjj" path="res://objects/door.tscn" id="4_5bkvf"]
[ext_resource type="PackedScene" uid="uid://cs1p7ktfubaqa" path="res://scenet/interactive_lever_3d.tscn" id="5_al6mo"]
[ext_resource type="PackedScene" uid="uid://bcxq2dtpk6q72" path="res://objects/wrench.tscn" id="6_wxfif"]
[ext_resource type="PackedScene" uid="uid://bk4l81g135y7i" path="res://objects/conditional_action.tscn" id="8_2clqc"]
[ext_resource type="PackedScene" uid="uid://cjq73kw12myrb" path="res://3dModels/pipe.glb" id="9_juai8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fo4sq"]

[sub_resource type="Environment" id="Environment_7bbxf"]
fog_enabled = true
fog_light_color = Color(0.0902371, 0.142881, 0.160132, 1)
fog_density = 0.35
fog_height = 0.3

[node name="Level3" type="Node3D"]
script = ExtResource("1_ne4j3")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_4afur")
cell_size = Vector3(4, 4, 4)
data = {
"cells": PackedInt32Array(0, 65535, 0, 0, 65534, 4, 0, 65533, 655364, 0, 65532, 4, 0, 65531, 655365, 65535, 65534, 1048576, 65534, 65534, 1048581, 65533, 65534, 655360, 1, 65533, 655360, 65534, 65532, 1048581, 65535, 65532, 1048576, 65533, 65532, 1048580, 65533, 65533, 0, 65533, 65535, 1441792, 0, 65530, 655364, 1, 65530, 1048576, 2, 65530, 1048579, 0, 0, 3, 0, 65529, 1441792, 65532, 65532, 655360)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Player" parent="." instance=ExtResource("3_dxci0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.6, -2)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.55519, 3.04956, -17.7554)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.95652, 0.634372, -4.21913)
shape = SubResource("BoxShape3D_fo4sq")

[node name="Door" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.05892, -13.9912)

[node name="Door2" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0752213, 2.10777, -6.00279)

[node name="Door3" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.90094, 2.10126, -10.0021)

[node name="Door4" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.91724, 2.1132, -21.9617)

[node name="Lever" parent="." instance=ExtResource("5_al6mo")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.88931, 3.69803, -17.9925)
toggle = true

[node name="Door5" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.00334, 2.52207, -11.9711)

[node name="Door6" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6.00953, 2.54864, -3.98337)
visible = false

[node name="Wrench" parent="." instance=ExtResource("6_wxfif")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -5.95303, 3.79559, -11.5653)

[node name="Lever2" parent="." instance=ExtResource("5_al6mo")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5.99907, 3.8008, -3.40901)
id = 1

[node name="Door7" parent="." instance=ExtResource("4_5bkvf")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10.0399, 2.09862, -12.0725)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7bbxf")

[node name="ConditionalAction" parent="." instance=ExtResource("8_2clqc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5893, 3.40033, -6.36588)
id = 2
required_item = "wrench"

[node name="CollisionShape3D" parent="ConditionalAction" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.063365, -0.373019, -0.525167)

[node name="MeshInstance3D" parent="ConditionalAction" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.063365, -0.373019, -0.525167)
visible = false

[node name="pipe" parent="ConditionalAction" instance=ExtResource("9_juai8")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0673733, -1.38682, 0.0728221)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="send_button_state" from="Lever" to="." method="_on_lever_send_button_state"]
[connection signal="send_item" from="Wrench" to="." method="_on_wrench_send_item"]
[connection signal="send_button_state" from="Lever2" to="." method="_on_lever_send_button_state"]
[connection signal="send_state" from="ConditionalAction" to="." method="_on_interactive_button_3d_send_button_state"]

[editable path="ConditionalAction"]
